--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,9 @@
     --branco-primario: #ffffff;
     --cinza-secundario: #c0c0c0;
     --botao-azul: #167bf7;
-    --cor-de-fundo: #00030c; 
+    --cor-de-fundo: #00030c;
+    --botao-azul-efeito: #3c92fa;
+
     --fonte-primaria: 'Inter', 'sans-serif';
 }
 
@@ -121,21 +123,34 @@ body {
 }
 
 .rodape {
-    
+    text-align: center;
+    margin: 5em 3em;
 }
 
-.rodape__logo {
 
+.lista__link a{
+    text-decoration: none;
+    color: var(--branco-principal);
+    margin-left: 1em;
 }
 
-.rodape__lista {
-
-}
-
-.lista__link {
-
+.lista__link a:hover{
+    color: var(--botao-azul);
 }
 
 .rodape__texto {
-    
+    margin: 1em 0;
+    color: var(--cinza-secundario);
+    font-size: 14px;
+}
+
+.rodape__lista {
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
+    margin-top: 1em;
+}
+
+.container__botao:hover {
+    background-color: var(--botao-azul-efeito);
 }
